2011-01-02 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.54
* added dir function

2010-12-13 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.53 (452)
* changed variables object to use a map for storage and not a static array - in preparation for some day handling run levels

2010-12-12 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.52 (451)
	* moved variables out of interperter into a new object in preparation for some day adding multiple run levels to handle true functions and subroutines
	* also celeaned up several variable related memory leaks

2010-12-10 sergey irupin <lamp@altlinux.org> 0.9.6.51 (449)
	* add 2 mathematics functions - sqr()/sqrt(), exp()

2010-11-26 sergey irupin <lamp@altlinux.org> 0.9.6.50 (448)
	* icon updates and fixed functions upper() and lower()

2010-11-18 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.49 (443)
	* added close of database files if database not closed by program

2010-11-03 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.48 (439)
	* removed mutex from say statement - eliminate frezing after speech

2010-10-25 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.47 (438)
	* initial MAC port - tested help & preferences
	* added Mac Icon
	* added logic to save font size as a preference

2010-10-24 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.46 (437)
	* initial MAC port - tested sound, say, playwav, database, and networking

2010-10-17 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.45 (435)
	* added IMGSAVE statement to save graphics area as a .png or other qt supported file type

2010-10-15 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.44 (434)
	* forces locale to "C" so that decimal mark '.' will always work

2010-10-11 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.43 (433)
	* fixed seek statement

2010-09-21 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.42
	* tested inpout32 with Windows7-x64 and Vista-x32 and changed compiling instructions
	
2010-09-20 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.41 (431)